data/derived/sp14/progs/unify/prog3911.ml.out
Characters 202-204:
  | Cosine (a) -> cos( pi * (eval (a,x,y)))
                       ^^
Error: This expression has type float but an expression was expected of type
         int
